--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
 		"php": ">=7.1",
         "symfony/http-foundation": "^5.0",
-        "ext-curl": "^7.2"
+        "ext-curl": "^7.2",
+        "ext-json": "*"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*",
