--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "volk/php-google-matrix-distance-api-client",
     "description": "Google matrix api for php implementation",
     "keywords": ["distance", "maps-api", "google"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Volkan Oluç",
