--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,13 @@
   "type": "library",
   "require": {
     "php": ">=7.1",
-    "symfony/http-foundation": "*",
     "ext-curl": "^7.2",
     "ext-json": "*",
-    "phpunit/phpunit": "6.*"
+    "phpunit/phpunit": "6.*",
+    "guzzlehttp/guzzle": "^7.0@dev"
   },
   "require-dev": {
     "php": ">=7.1",
-    "symfony/http-foundation": "*",
     "ext-curl": "^7.2",
     "ext-json": "*",
     "phpunit/phpunit": "6.*"
