--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "php": ">=7.1",
     "ext-curl": "^7.2",
     "ext-json": "*",
-    "phpunit/phpunit": "6.*",
-    "guzzlehttp/guzzle": "^7.0@dev"
+    "phpunit/phpunit": "6.*"
   },
   "require-dev": {
     "php": ">=7.1",
